<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawerLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5FFFA"
    tools:context=".ExportActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvExport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/ralewaymedium"
        android:text="@string/export_info"
        android:textAlignment="center"
        android:textColor="#121111"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/linearLayoutExport"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvExport"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ralewaymedium"
            android:onClick="saveExport"
            android:text="@string/export_to_storage"
            android:textSize="12sp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:fontFamily="@font/ralewaymedium"
            android:onClick="saveExportDrive"
            android:text="@string/export_to_drive"
            android:textSize="12sp" />

    </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayoutImport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutExport"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/ralewaymedium"
                android:onClick="getPath"
                android:text="@string/import_from_storage"
                android:textSize="12sp" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:fontFamily="@font/ralewaymedium"
                android:onClick="saveImportDrive"
                android:text="@string/import_from_drive"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llExport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutImport"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvReports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/ralewaybold"
                android:text="@string/reports"
                android:textColor="#000000"
                android:textSize="18sp"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/tvSuccess"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:fontFamily="@font/ralewaymedium"
                android:textAlignment="center"
                android:textColor="#101010"
                android:textSize="12sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/listViewExport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/llExport"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/listViewExport"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/ralewaybold"
            android:textAlignment="center"
            android:textColor="#101010"
            android:textSize="18sp" />
    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_drawer_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>