<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    android:id="@+id/drawerLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5FFFA"
    tools:context=".MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvNoTransactions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ralewaymedium"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/no_transactions_click_one"
        android:textAlignment="center"
        android:textColor="#252424"
        android:textSize="14sp"
        tools:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayoutMonths"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvMonth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ralewaymedium"
                android:onClick="calenderFunction"
                android:text="@string/november"
                android:textAlignment="center"
                android:textColor="#433E3E" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="calenderFunction"
                app:srcCompat="@drawable/ic_down" />

        </LinearLayout>

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/linearLayoutMonths" />

        <LinearLayout
            android:id="@+id/linearLayoutIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/calendarView"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ralewaybold"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="#575252"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvExpense"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ralewaybold"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="#575252"
                android:textSize="24sp" />
            <TextView
                android:id="@+id/tvBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ralewaybold"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textColor="#575252"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutIncomeeee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/linearLayoutIncome"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvIncomeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ralewaybold"
                android:gravity="center"
                android:text="@string/income_main"
                android:textColor="#353434"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tvExpenseText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ralewaybold"
                android:gravity="center"
                android:text="@string/expenses_main"
                android:textColor="#353434"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/tvBalanceText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/ralewaybold"
                android:gravity="center"
                android:text="@string/balance_main"
                android:textColor="#353434"
                android:textSize="11sp" />
        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/linearLayoutIncomeeee"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="13dp"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/tvChart"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/ralewaybold"
            android:text="@string/finance_chart"
            android:textColor="#252121"
            android:textSize="16sp" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvChart">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pieChartIncome"
                    android:layout_width="400dp"
                    android:layout_height="200dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/pieChartExpense"
                    android:layout_width="400dp"
                    android:layout_height="200dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="8dp" />

            </LinearLayout>
        </HorizontalScrollView>

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/horizontalScrollView"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="13dp"
            android:background="#c0c0c0" />

        <TextView
            android:id="@+id/tvTransactions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/line2"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/ralewaybold"
            android:text="@string/transactions"
            android:textColor="#252121"
            android:textSize="16sp" />

        <ListView
            android:id="@+id/mainListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_below="@id/tvTransactions"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:clickable="true"
            android:onClick="addData"
            app:srcCompat="@drawable/ic_add" />

    </RelativeLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_drawer_menu"
        android:layout_gravity="start"
        android:fitsSystemWindows="true">

    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>